--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,11 @@
     color: white;
     background-color: #ff136ecb;
     border-radius: 5px;
+    border: none;
 }
 .submit-btn{
     color: white;
     background-color: #ff136ecb;
     border-radius: 5px;
+    border: none;
 }
